--- a/src/Components/FindJobs.css
+++ b/src/Components/FindJobs.css
@@ -34,7 +34,7 @@
   
   .searchicons {
     position: absolute;
-    top: 22px;
+    top: 16px;
     right: 42%;
     cursor: pointer;
   }
@@ -51,15 +51,15 @@
   
   .jobCat {
     position: relative;
-    border: 2px solid black;
+    border: 1px solid rgb(29, 193, 89);
     /* font-weight: bold; */
     border-radius: 10px;
     height: 280px;
     width: 65%;
     max-width: 700px;
     margin: 20px;
-    box-shadow: 10px 2px 10px;
-    color: rgb(42, 45, 47);
+    box-shadow: 5px 2px 5px;
+    color: rgb(19, 165, 75);
   }
   
   .jobCat h2,
@@ -86,7 +86,7 @@
   }
   
   .Applybutton {
-    left: 65%;
+    left: 60%;
     color: #000;
   }
   
