--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -38,8 +38,25 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around
+
+    }
+    .findjob h1{
+        font-size: 20px;
+    }
+    .FindSearch input{
+        width: 686px; 
+        height: 95px;
+        padding-bottom: 2px;
+        padding-left: 258px;
+        border:2px solid rgb(25, 125, 77);
+        border-radius:10px;
+    
+
     }
    
+    .searchicon{
+        color: #000;
+    }
 
     .bestjob {
         color: #31a85f;
@@ -48,8 +65,8 @@
         border: none;
         letter-spacing: 2px;
         font-size: 20px;
-        border-bottom: 2.5px solid rgb(16, 179, 68); 
-        border-radius: 4px;
+        /* border-bottom: 2.5px solid rgb(16, 179, 68); 
+        border-radius: 4px; */
         /* margin-left:330px ; */
         margin-top: 50px;
         /* background-image: linear-gradient(to right, #254dac,rgb(25, 154, 83)); */
@@ -65,6 +82,7 @@
         
     }
    
+   
 
 
 
@@ -78,7 +96,7 @@
     justify-content:center;
     width:max-content;
     /* margin-top: 50px; */
-    /* border: 1px solid black; */
+ /* border: 1px solid black;  */
     text-decoration: none;
     flex-direction: column;
 
@@ -281,7 +299,7 @@
 }
 .discrpition{
     /* z-index:99;  */
-    left:0px;
+    left:205px;
     
     border-radius: 20px; 
     box-shadow: 10px 10px 10px rgba(26, 24, 24, 0.5);
@@ -382,18 +400,26 @@ h4{
 
 .helpbox {
     position: absolute;
-    right:  30px; 
-    max-width: 200px;
+    right:  35px; 
+    max-width: 250px;
     /* width: 200px;   */
  height: 150px;  
-/* top:-10px; */
- /* bottom: 90px; */
- margin-bottom: 448px;
+top:160%;
+ 
+ /* bottom: 550px; */
+ /* border: 1px solid black; */
 
     /* background-color: #f2f2f2; */
     /* border:  1px solid #1e622f; */
     z-index: 3;
     text-align: center;
+}
+.searchicon{
+    width: 67px;
+    height: 60px;
+   
+    
+    
 }
 
 .helpbox.display-block {
@@ -405,8 +431,8 @@ h4{
 }
 
 .helpbox h2 {
-    font-size: 20px;
-    padding: 3px;
+    font-size: 15px;
+    padding: 5px;
     color: #000;
     /* background-color: green; */
 }
@@ -424,12 +450,12 @@ h4{
 .helpbox li {
     padding: 0px;
     letter-spacing: 1px;
-    font-size: 17px;
+    /* font-size: 17px; */
     /* color: white!important; */
     margin-right: 0px;
     display: block; 
     text-decoration: none !important;
-    margin: 0px;
+    margin: 5px;
     color: #000!important;
    
 }
@@ -437,7 +463,7 @@ h4{
     width: 120px!important;
     height: 25px;
     border-radius: 10px;
-    margin-top: 5px;
+    /* margin-top: 5px; */
 }
   
   
@@ -447,11 +473,134 @@ h4{
 
 .helpbox ul li a {
     text-decoration: none !important;
-   
+   color:#2e3abc;
     margin-left: 0px;
     margin-right: 0px;
 
 }
+#wave {
+    width: 883px;
+    /* height: 350px; */
+    display:table;
+  margin-top: 110px;
+ margin-left: 180px;
+  border: 3px solid greenyellow;
+   
+    
+}
+#wave h1{
+    margin-top: 53px;
+    padding-top: 0px;
+    margin-left: 260px;
+    padding-bottom: 36px;
+    color: #2ecc71;
+}
+#wave > div {
+    display: inline-block;
+   
+  
+}
+.circle {
+    position:relative;
+    padding: 49px;
+    width: 120px;
+    height: 100px;
+    left: 12px;
+     bottom: 19px; 
+
+    
+
+    background-color: #eee;
+    border: solid 1px #ddd;
+    z-index: 999;
+}
+.line-top {
+    width: 117px;
+    height:60px;
+    z-index: -1;
+    background: transparent;
+    border: none;
+    border-top: dashed 3px rgb(13, 255, 0);
+    border-radius: 50%;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-right: 76px;
+    padding-left: 0px;
+    margin-right: 0px;
+    margin-left: 0px;
+    /* border-top-width: 3px; */
+    margin-top: 3px;
+    height: 40px;
+  
+   
+   
+}
+.line-bottom {
+    width: 120px;
+    height:60px;
+    z-index: -1;
+    background: transparent;
+    border: none;
+    border-bottom: dotted 5px rgb(13, 255, 0);
+    /* padding-bottom: 60px; */
+    border-radius: 0 0 50% 50%;
+    margin:  0px;
+    color: green;
+    /* bottom: 19px; */
+
+}
+
+.popularCategory {
+
+    padding: 70px;
+   
+    display: flex;
+    top: 50px;
+    position: relative;
+    color: #2ecc71;
+    
+}
+.popularCategory h1  {
+    font-size: 24px;
+     position: absolute;
+    top: -35px;
+    left:38%
+}
+.category-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+   
+  }
+  .icon {
+    width: 70px;
+    height: 70px;
+    background: linear-gradient(to right, #2ecc71, #3498db);
+    /* margin-right: 10px; */
+     border-radius: 5px;
+  }
+  .category-description p{
+    margin-left: 10px;
+  }
+
+
+.searchdata{
+    width: 133px;
+    height: 70px;
+    margin: 10px;
+    /* border-radius: none !important; */
+
+}
+.fjobs{
+    margin: 10px;
+     padding: 25px;
+     background-color: #1ca93d;
+     border-radius: 5px;
+     margin-right: 7px;
+    margin-left: 0px;
+ }
+
     
 @media screen and (max-width: 767px){
    .home-container{
@@ -495,9 +644,15 @@ h4{
 .bestjob {
   text-align: center;
   font-size: 18px; 
-  marginLeft:472px
+  /* marginLeft:472px */
 }
 
+.fjobs{
+    font-size: 23px;
+   
+
+
+}
 
 @media only screen and (max-width: 768px) {
   .images-flex {
@@ -526,44 +681,98 @@ h4{
   }.discrpition p{
     width: 152px;
     margin-left: 63px;
-}
-  
+    
 }.helpbox{
-    margin-bottom: 400px;
+    margin-bottom: 20px;
     margin-right:100px ;
     font-size: 12px;
-   
+    /* margin-top: 68px */
+    
 }.helpbox  a{
     font-size: 10px;
     
-  
+    
 }
 .helpbox h2{
-    font-size: 10px;
+    font-size: 12px;
 }
 .social-icons p{
-    margin-top: -10%;
-   padding-bottom: 20px;
+    margin-top: -26%;
+    padding-bottom: 20px;
     margin-left:33% ;
     font-size:12px ;
-  
+    
+    
 }.findjob h1{
     padding-bottom:3px ;
-    font-size: 0px;
+    font-size: 20px;
     margin-bottom:23px ;
+    
+}
+
+.fjobs{
+    flex-direction: column;
+   
+    padding-right: 0px;
+    padding-left: 0px;
+    margin-left: 0px;
+
+    padding-bottom: 0px;
+    padding-top: 0px;
+   ;
 }
 /* }.icons p{
     margin: 10px;
     font-size: 10px;
-
+    
 } */
 .bestjobs p{
-  margin-left:117px;
+    margin-left:117px;
+    
 }
+.FindSearch input{
+    width: 299px;
+    padding-left: 123px;
+    height: 36px;
 
+}.searchdata{
+    width: 54px;
+    height: 25px;
+}
+    .popularCategory{
+        display: flex;
+        flex-direction: column;
+    }
+    .popularCategory h1 p{
+        font-size: 10px;
+    }.findjob h1{
+        font-size: 20px;
+    }
+    #wave{
+        margin-left: 0px;
+        width: 30px;
+        padding-right: 186px;
+        padding-left: 105px;
+    }.line-top{
+        border-top: none;
+    }.line-bottom{
+        border-bottom: none;
+    }#wave h1{
+        margin-left:35px ;
+    }.helpbox{
+        position: absolute;
+        top:87%;
+        left: -5px;
+    }.social-icons{
+        top: 932px;
+        left: 298px;
+    
+    }
 
-
-
+    
+    
+    
+}
 
     
     
