--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -152,6 +152,7 @@ button {
      border-radius: 15px; 
     /* margin-bottom: 95px; */
     width: 500px;
+    /* height: 52px; */
 }
 
 button:hover {
