--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -1,4 +1,4 @@
-/* Contact.css */
+
 .formContact {
   width: 80%;
   max-width: 600px;
@@ -22,7 +22,7 @@
   width: 100%;
   padding: 10px;
   margin-bottom: 10px;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
   border-radius: 5px;
   box-sizing: border-box;
 }
@@ -60,5 +60,4 @@
   .formContact textarea {
     padding: 8px;
     font-size: 14px;
-  }
-}
+  }}
