--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -3,7 +3,9 @@
   margin: 0px;
   box-sizing: border-box;
 }
+
 .home-container {
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
