--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -152,7 +152,7 @@ button {
      border-radius: 15px; 
     /* margin-bottom: 95px; */
     width: 500px;
-    /* height: 52px; */
+    height: 52px;
 }
 
 button:hover {
@@ -161,13 +161,13 @@ button:hover {
 
 .password-toggle{
     position: absolute;
-    top: 203px;
+    top: 175px;
     right: -77px;
     width: 20px;
     height: 20px;
      outline: none; 
      border-radius: 50%;
-     background-image: linear-gradient(to right, #1dc0af,black);  
+     /* background-image: linear-gradient(to right, #1dc0af,black);   */
      
     font-size: 1em;
    
