--- a/src/Components/Register.css
+++ b/src/Components/Register.css
@@ -33,7 +33,7 @@ body{
   justify-content: center;
   align-items: center;
   position: relative;
-  margin-bottom: 33px; 
+  margin-bottom: 25px; 
   flex-wrap: wrap;
   
 }
@@ -97,26 +97,25 @@ body{
 }
 form {
     width: 320px; 
-     margin-bottom: 20px auto;
+    
      text-align: center;
-     /* border: 1px solid rgb(196, 114, 114); */
+     
      display: flex;
      justify-content: space-around;
      align-items: center;
      flex-direction:column;
      gap: 10px;
      padding: 20px;
-     /* box-shadow: inset 0 5px 30px rgba(151, 84, 84, 0.5), 0
-     0 10px rgba(17, 16, 16, 0.1); */
+   
      backdrop-filter: blur(30px) saturate(50%);
      border-radius: 30px; 
      z-index: 998;
      height: 350px;
-     /* margin-bottom: 100px; */
+    
 } 
 .registerbutton{
 
-    /* padding: 0.625rem 1rem; */
+    padding: 0.625rem 1rem;
     background-color: #1a27bc;
     color: #fff;
     border: none;
@@ -124,8 +123,8 @@ form {
     transition: background-color 0.3s;
      border-radius: 5px; 
      margin-right: 125px;
-    width: 500px;
-    height: 20px;
+    width: 515px;
+  
     
 }
 .btn:hover{
