--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -6,7 +6,7 @@
   min-height: 100vh;
 }
 .contact h1{
-  align-items: center;
+color: green;
   
 }
 
@@ -43,6 +43,10 @@
   text-align: center;
 }
 
+.contacttext{
+ 
+  padding: 40px;
+}
 @media (max-width: 767px) {
   .formContact {
     max-width: 90%; 
@@ -73,7 +77,7 @@
 
   .formContact {
     flex: 1;
-    margin-right: 80px; 
+    margin-right: 200px; 
   }
 }
 
