--- a/src/Components/Employer.css
+++ b/src/Components/Employer.css
@@ -26,13 +26,17 @@
   width: 100vw;
   height: 700px;
   /* padding-top: -50px; */
+  object-fit: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
  
 .imageChild2 {
-  height: 400px;
-  width: 300px;
+  height: 447px;
+  width: 377px;
   padding-bottom: 80px;
-  object-fit: cover;
+  filter: drop-shadow(0px 10px 10px rgba(40, 154, 112, 0.2));
 }
 .imageChild2 img {
   height: 100%;
