--- a/src/Components/Employer.css
+++ b/src/Components/Employer.css
@@ -215,3 +215,31 @@
   display: block;
 }
 
+@media only screen and (max-width: 480px){
+  .employerbrand{
+    padding-left: 0px;
+    width: 375px;
+    height: 255px;
+  }
+  .iconsection{
+    flex-direction: column;
+    height: 733px;
+
+  }
+  .carrerHeader{
+    font-size: 16px;
+  }
+  .carrerHeader h3{
+    padding-top: 14px;
+    padding-left: 0p;
+    font-size:14px ;
+  }
+  .carrerContainer{
+    height: 925px;
+  }
+  .garphchild img{
+    width: 375px;
+    height: 480px;
+    padding-bottom: 64px
+  }
+}
