--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -5,7 +5,7 @@
 }
 
 .home-container {
-  overflow: hidden;
+  /* overflow: hidden; */
   display: flex;
   justify-content: center;
   align-items: center;
