--- a/src/Components/FindJobs.css
+++ b/src/Components/FindJobs.css
@@ -22,6 +22,7 @@
     margin: 0px 0;
     flex-direction: column;
     flex-wrap: wrap;
+    
   }
   
   #search {
@@ -46,6 +47,7 @@
     align-items: center;
     font-size: 16px;
     font-style: italic;
+    min-height: 100vh;
 
   }
   
